--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"prefix": ".",
-	"token": "Njk4NTIzMjMzMTAzNjQyNjU0.XpHJ0w.eudAdt8OB-TSEojNWyATbei_VVI",
+	"token": "Njk4NTIzMjMzMTAzNjQyNjU0.XpHEdA.axreTj0pf2oeCf0mRpllrVuFw48",
 	"newsapi": "15d54de951c1467eb1a23734398d8fed",
 	"generalChannel": "678548998562512903",
 	"imageChannel": "678563701871083531",
@@ -12,5 +12,5 @@
 		"soLuong": "5",
 		"thoiGian": "5"
 	},
-	"server":"http://202.43.110.12:5055"
+	"server": "http://202.43.110.12:5055"
 }
